# hlog

./: README.md  adminpasswd  hlog.cabal  hlog.hs  stack.yaml
app/: Main.hs
src/: Ecumenical.hs  Lib.hs  Server.hs
static/: hello.html
test/: EcumenicalSpec.hs  ServerSpec.hs  Spec.hs
